--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bvalosek/jsdoc3-bootstrap.git"
+  },
+  "dependencies": {
+    "bootstrap": "^3.2.0"
   }
 }
