--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/bvalosek/jsdoc3-bootstrap.git"
   },
   "dependencies": {
-    "bootstrap": "^3.2.0"
+    "bootstrap": "^3.2.0",
+    "dotenv": "^0.4.0"
   }
 }
