--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jsdoc3-bootstrap",
   "version": "0.7.0",
-  "description": "JSDoc 3 Bootstrap 2 Theme",
+  "description": "JSDoc 3 Bootstrap Theme",
   "repository": {
     "type": "git",
     "url": "https://github.com/bvalosek/jsdoc3-bootstrap.git"
